<resources>
    <string name="app_name">My Application</string>
    <string name="hello_world">hello world</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="keyword">关键词</string>
    <string name="mulkeyword">多个关键词</string>
    <string name="paomadeng">循环播放一个textview,abcdefghijklmnopqrstuvwswz，继续循环播放laaaa</string>
    <string name="lan">篮球</string>
    <string name="zu">足球</string>
    <string name="ping">乒乓球</string>
    <string name="tiaozhuanone">对话框</string>
    <string name="tiaozhuantwo">传值</string>
    <string name="name">我是名字</string>
    <string name="desc">我是描述</string>
    <string name="xianshi">show data</string>
    <string name="fanhui">返回</string>
    <string name="caculate">计算器</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="toasttest">Toast</string>
    <string name="toasttest2">Toast2</string>
    <string name="toasttest3">Toast3</string>
    <string name="toasttest4">Toast4</string>
    <string name="star">星星</string>
    <string name="querendialog">确认对话框</string>
    <string name="danxuandialog">单选对话框</string>
    <string name="duoxuandialog">多选对话框</string>
    <string name="liebiaodialog">列表话框</string>
    <string name="tijiao">提交</string>
    <string name="zidingyi">自定义对话框</string>
    <string name="tongzhi">发送消息通知</string>
    <string name="fasong">发送消息</string>
    <string name="quxiao">取消</string>
    <string name="xiayiye">下一页</string>
    <string name="caidanlan">菜单栏</string>
    <string name="caidancontext">上下文菜单</string>
    <string name="presave">保存密码示例</string>
    <string name="prelizi">sharepref例子</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="jizhu">记住</string>
    <string name="login">登录</string>
    <string name="shujuku">SQLite页面</string>
    <string name="sqlithelp">SQLiteOpenHelper</string>
    <string name="newfile">创建文件</string>
    <string name="writeread">文件读写</string>
    <string name="contentpro">读联系人</string>
    <string name="writecotack">写联系人</string>
    <string name="guangbo">广播</string>
    <string name="sendguangbo">发送一条普通广播</string>
    <string name="sendguangbo2">发送一条有序广播</string>
    <string name="sendguangbo3">发送一条异步广播</string>
    <string name="service">service</string>
    <string name="bind">bind</string>
    <string name="play">play</string>
    <string name="servicestart">service开始</string>
    <string name="servicestop">service结束</string>
    <string name="servicebind">service绑定</string>
    <string name="unservicebind">解除绑定</string>
    <string name="bofang">播放</string>
    <string name="zanting">暂停</string>
    <string name="previoussong">上一首</string>
    <string name="nextsong">下一首</string>
    <string name="sysservice">系统服务</string>
    <string name="panduannet">判断网络是否连接</string>
    <string name="panduanwifi">打开/关闭wifi</string>
    <string name="panduanvolume">获取系统音量</string>
    <string name="panduancxb">当前运行的程序包名</string>
    <string name="panduanbj">布局填充器</string>
    <string name="panduantz">通知管理器</string>
    <string name="gesture1">手势识别1</string>
    <string name="gesture2">手势识别2</string>
    <string name="gesture3">手势识别3</string>
    <string name="name1">姓名</string>


</resources>
