<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service" />

        <Button
            android:id="@+id/button50"
            android:onClick="doClickSV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/servicestart" />

        <Button

            android:id="@+id/button52"
            android:onClick="doClickSV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/servicestop" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bind" />

        <Button
            android:id="@+id/button53"
            android:onClick="doClickSV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/servicebind" />

        <Button
            android:id="@+id/button58"
            android:onClick="doClickSV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unservicebind" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button54"
            android:onClick="doClickSV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bofang" />

        <Button
            android:id="@+id/button55"
            android:onClick="doClickSV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previoussong" />

        <Button
            android:id="@+id/button56"
            android:onClick="doClickSV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nextsong" />

        <Button
            android:id="@+id/button57"
            android:onClick="doClickSV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zanting" />
    </LinearLayout>

</LinearLayout>